packages/opencode-plugin-manager/src/output/snapshots/oc_plugins__output__human__tests__snapshot_list_curated_plugin_update_available.snap
---
source: src/output/human.rs
expression: "&output"
---
Configured OpenCode plugins

Project
  RAM Monitor  (ram-monitor)
  Monitor OpenCode's RAM usage per session in real time.
  @capybearista/opencode-ram-monitor
  0.2.1   latest 0.3.0   update available
