packages/opencode-plugin-manager/src/output/snapshots/oc_plugins__output__human__tests__snapshot_list_third_party_plugin_no_description.snap
---
source: src/output/human.rs
expression: "&output"
---
Configured OpenCode plugins

Global
  some-third-party
  some-third-party
  1.0.0
