packages/opencode-plugin-manager/src/output/snapshots/oc_plugins__output__human__tests__snapshot_render_outdated_human_with_alias.snap
---
source: src/output/human.rs
assertion_line: 1126
expression: "&output"
---
Outdated (1):
  Curated Pkg  (my-alias)  v1.0.0 → v2.0.0
