packages/opencode-plugin-manager/src/output/snapshots/oc_plugins__output__human__tests__snapshot_render_plugins_missing_manifest.snap
---
source: src/output/human.rs
expression: "&output"
---
Configured OpenCode plugins

Project
  broken-plugin
  broken-plugin
  —   latest 2.0.0   not installed
