packages/opencode-plugin-manager/src/output/snapshots/oc_plugins__output__human__tests__snapshot_render_plugins_single_outdated.snap
---
source: src/output/human.rs
expression: "&output"
---
Configured OpenCode plugins

Project
  my-plugin
  A useful plugin
  my-plugin
  1.0.0   latest 2.0.0   update available
