packages/opencode-plugin-manager/src/output/snapshots/oc_plugins__output__human__tests__snapshot_render_plugins_verbose.snap
---
source: src/output/human.rs
expression: "&output"
---
Configured OpenCode plugins

Project
  verbose-plugin
  A verbose plugin.
  verbose-plugin
  1.0.0   latest 2.0.0   update available
  /tmp/opencode.json
